maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:24: error: ';' expected but 'else' found.
  else{
  ^