maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code

override def run() {
  while(!estSurBiscuit()){
    avance()
    keepHandOnSideWall()

  }
  prendBiscuit()
  droite()


}

def keepHandOnSideWall(){
  while (estFaceMur()){
    droite()
  }

  avance()
  gauche()
  if (estFaceMur()){
    droite()
    avance()
  else{
    avance()}
  }
}


